# OMNIA

./: .gitignore  .zenodo.json  APPLIED-CASE-001-LOCAL-CORRECTNESS-IS-NOT-TOTAL-VALIDITY.md  APPLIED-CASE-002-PROJECTION-DECISION-FAILURE.md  CITATION.cff  CORE_SCOPE.md  GSM_SYMBOLIC_V1_PROTOCOL.md  GSM_SYMBOLIC_V1_RESULTS.md  INFINITY-FIRST-OMNIA.md  LICENSE  MASTER_POSITION.md  PROJECTION-FIDELITY-DECISION-VALIDITY-CRITERION.md  PROJECTION-FIDELITY-THEOREM.md  README.md  README_REAL_VALIDATION_V7.md  REVIEWER-CORRECTION-PLAN.md  TOTALITY-FIELD.md  VALIDATION_SUMMARY.md  WRONG-OBJECT-TEST-MATRIX.md  WRONG-OBJECT-TEST.md  ecosystem_manifest.json  pyproject.toml  run_baseline_majority_v2.py  run_baseline_majority_v2_harder.py  run_baseline_simple_v1.py  run_compare_harder_v1.py  run_compare_omnia_vs_baseline_v1.py  run_compare_omnia_vs_baselines_v2.py  run_omnia_fragility_test.py  run_omnia_gate_v2.py  run_omnia_gate_v4_super.py  run_omnia_gate_v5_super.py  run_omnia_gate_v6_harder.py  run_omnia_gate_v6_super.py  run_omnia_gate_v7_super.py  run_omnia_gate_v8_flan_large.py  run_omnia_gate_v8_perturbation.py  run_omnia_gate_v9_external_attack.py  run_omnia_gate_v9_gsm8k_real.py  run_omnia_gate_v9_gsm8k_real_stronger.py  (+14 more)
data/: account_access_hollow_responses_v1.jsonl  real_llm_outputs.jsonl  real_llm_outputs_v14_local_flan_t5_small.jsonl  support_screening_external_v1.jsonl  support_screening_external_v2.jsonl  v13_real_batch.jsonl
docs/: ACCOUNT_ACCESS_HOLLOW_BENCHMARK_PLAN.md  ACCOUNT_ACCESS_HOLLOW_CASE_ANALYSIS_V1.md  ACCOUNT_ACCESS_HOLLOW_ERROR_ANALYSIS_V1.md  (+110 more)
(+176 files in other folders)
