[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnia"
version = "0.1.0"
description = "Post-hoc structural measurement and gating core for detecting silent fragility under bounded transformations."
authors = [{ name = "Massimiliano Brighindi" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]